--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                         <div class="wrap-inner">
                             <div id="site-logo" class="clearfix">
                                 <div id="site-logo-inner">
-                                    <a href="home-hero-slideshow.html" title="Construction" rel="home" class="main-logo">
+                                    <a asp-controller="Home" asp-action="Index" title="Construction" rel="home" class="main-logo">
                                         <img src="~/assets/img/logo-light.png" alt="Construction" data-retina="assets/img/logo-light@2x.png" data-width="204" data-height="30">
                                     </a>
                                 </div>
