--- a/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using ConstructionSite.Entity.Models
+@using ConstructionSite.Areas.ConstructionAdmin.Models.ViewModels.Account
 @using ConstructionSite.Areas.ConstructionAdmin.Models.DTO
 @using ConstructionSite.Entity.Identity
 @using ConstructionSite.Areas.ConstructionAdmin.Models.ViewModels
