--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -56,49 +56,9 @@
                                     <li><a asp-controller="About" asp-action="Index">About</a></li>
                                     <li class="menu-item menu-item-has-children">
                                         <a href="#team">Services</a>
-                                        <ul class="sub-menu">
-                                            <li class="menu-item">
-                                                <a asp-controller="Services" asp-action="Construction">Construction</a>
-                                                <ul class="sub-menu2">
-                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Renovation">Service1</a></li>
-                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Construction">Service2</a></li>
-                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Architecture">Service3</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="menu-item">
-                                                <a asp-controller="Services" asp-action="Renovation">Renovation</a>
-                                                <ul class="sub-menu2">
-                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Renovation">Service4</a></li>
-                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Consulting">Service5</a></li>
-                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Architecture">Service6</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="menu-item">
-                                                <a asp-controller="Services" asp-action="Consulting">Consulting</a>
-                                                <ul class="sub-menu2">
-                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Renovation">Service8</a></li>
-                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Consulting">Service9</a></li>
-                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Architecture">Service10</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="menu-item">
-                                                <a asp-controller="Services" asp-action="Architecture">Architecture</a>
-                                                <ul class="sub-menu2">
-                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Renovation">Service8</a></li>
-                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Consulting">Service9</a></li>
-                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Architecture">Service10</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="menu-item">
-                                                <a asp-controller="Services" asp-action="Electrical">Electrical</a>
-                                                <ul class="sub-menu2">
-                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Renovation">Service8</a></li>
-                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Consulting">Service9</a></li>
-                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Architecture">Service10</a></li>
-                                                </ul>
-                                            </li>
-                                        </ul>
+                                        @await Component.InvokeAsync("ServiceMenu")
                                     </li>
+                                   
                                     <li><a asp-controller="Portfolio" asp-action="Index">Portfolio</a></li>
                                     <li><a asp-controller="Blog" asp-action="Index">Blog</a></li>
                                     <li><a asp-controller="Contact" asp-action="Index">Contact</a></li>
