--- a/ConstructionSite/Views/Services/Index.cshtml
+++ b/ConstructionSite/Views/Services/Index.cshtml
@@ -39,8 +39,8 @@
                                     <div class="service-item clearfix">
                                         <div class="thumb"><img width="350" height="223" src="@item.image" alt="image" /></div>
                                         <div class="service-item-wrap">
-                                            <h3 class="title font-size-18"><a asp-controller="Services" asp-action="Renovation">@item.NameAz</a></h3>
-                                            <p>@item.TittleAz</p>
+                                            <h3 class="title font-size-18"><a asp-controller="Services" asp-action="Renovation">@item.Name</a></h3>
+                                            <p>@item.Tittle</p>
                                             <a asp-controller="Services" asp-action="Renovation" class="wprt-button small rounded-3px">READ MORE</a>
                                         </div>
                                     </div>
