--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Add.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model ProjectAddModel
 @{
     ViewData["Title"] = "Add";
 }
@@ -10,25 +10,25 @@
                    Project  Add
                 </header>
                 <div class="panel-body">
-                    <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Add" method="post" enctype="multipart/form-data">
+                    <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Project" asp-action="Add" method="post" enctype="multipart/form-data">
                         <div class="form-group">
 
                             <div class="col-lg-10">
-                                <input type="text" name="TittleAz" placeholder="TittleAz" id="f-name" class="form-control">
+                                <input type="text" asp-for="NameAz" id="f-name" class="form-control">
 
                             </div>
                         </div>
                         <div class="form-group">
 
                             <div class="col-lg-10">
-                                <input type="text" name="TittleRu" placeholder="TittleRu" id="f-name" class="form-control">
+                                <input type="text" asp-for="NameRu" id="f-name" class="form-control">
 
                             </div>
                         </div>
                         <div class="form-group">
 
                             <div class="col-lg-10">
-                                <input type="text" name="TittleEn" placeholder="TittleEn" id="f-name" class="form-control">
+                                <input type="text" asp-for="NameEn" id="f-name" class="form-control">
 
                             </div>
                         </div>
@@ -36,20 +36,29 @@
                         <div class="form-group ">
 
                             <div class="col-lg-10">
-                                <textarea placeholder="ContentRu" class="form-control " id="ccomment" name="ContentRu" required=""></textarea>
+                                <textarea asp-for="ContentAz" class="form-control " id="ccomment" required=""></textarea>
                             </div>
                         </div>
                         <div class="form-group ">
 
                             <div class="col-lg-10">
-                                <textarea placeholder="ContentEn" class="form-control " id="ccomment" name="ContentEn" required=""></textarea>
+                                <textarea asp-for="ContentRu" class="form-control " id="ccomment" required=""></textarea>
                             </div>
                         </div>
                         <div class="form-group ">
 
                             <div class="col-lg-10">
-                                <textarea placeholder="ContentAz" class="form-control " id="ccomment" name="ContentAz" required=""></textarea>
+                                <textarea asp-for="ContentEn" class="form-control " id="ccomment" required=""></textarea>
                             </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-lg-10">
+                                <select class="form-control m-bot15" asp-for="PortfolioId" asp-items="@ViewBag.items">
+
+                                    <option>Please select one</option>
+                                </select>
+                            </div>
+
                         </div>
                         <div class="form-group">
 
