--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Create.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Create.cshtml
@@ -1,5 +1,4 @@
 ﻿@model ConstructionSite.Areas.ConstructionAdmin.Models.ViewModels.UserViewModel
-
 <!--main content start-->
 <section id="main-content">
     <section class="wrapper">
@@ -19,11 +18,11 @@
                             <form class="cmxform form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Create" id="signupForm" method="post">
                                 <div asp-validation-summary="ModelOnly" class="form-group ">
                                     @Html.AntiForgeryToken()
-                                    <label for="firstname" class="control-label col-lg-2">@Html.DisplayNameFor(model => model.Name)</label>
-                                    <div class="col-lg-10">
-                                        <input type="text" asp-for="Name" class=" form-control" placeholder="Enter a name" />
-                                        <span asp-validation-for="Name" class="text-danger"></span>
-                                    </div>
+                                    @*<label for="firstname" class="control-label col-lg-2">@Html.DisplayNameFor(model => model.Name)</label>
+                                        <div class="col-lg-10">
+                                            <input type="text" asp-for="Name" class=" form-control" placeholder="Enter a name" />
+                                            <span asp-validation-for="Name" class="text-danger"></span>
+                                        </div>*@
                                 </div>
                                 <div class="form-group ">
                                     <label for="username" class="control-label col-lg-2">@Html.DisplayNameFor(m => m.Username)</label>
@@ -49,7 +48,7 @@
                                 <div class="form-group">
                                     <div class="col-lg-offset-2 col-lg-10">
                                         <button class="btn btn-danger" type="submit">Save</button>
-                                        <button asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Index" class="btn btn-default" type="button">Cancel</button>
+                                        <button class="btn btn-default cancel-button" type="button">Cancel</button>
                                     </div>
                                 </div>
                             </form>
@@ -63,3 +62,15 @@
     </section>
 </section>
 <!--main content end-->
+
+@section scripts{
+    @*<script src="~/ConstructionAdmin/js/jquery-1.8.3.min.js"></script>*@
+    <script>
+        $(".cancel-button").click(function () {
+            window.location.href = "/ConstructionAdmin/Account/Index";
+        })
+        
+    </script>
+    
+
+}
