--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/AdminComponents/Default.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/AdminComponents/Default.cshtml
@@ -1,23 +1,30 @@
-﻿@model UserDTO
-<div class="panel-body bio-graph-info">
-    <div class="row">
-        <div class="bio-row">
-            <p><span>Username </span>: @Model.Name</p>
-        </div>
-        <div class="bio-row">
-            <p><span>Email </span>: @Model.Email</p>
-        </div>
-        <div class="bio-row">
-            <p><span>Country </span>: Azerbaijan</p>
-        </div>
-        <div class="bio-row">
-            <p><span>Address </span>: Adress yazilmali</p>
-        </div>
-        <div class="bio-row">
-            <p><span>Mobile </span>: (12) 03 4567890</p>
-        </div>
-        <div class="bio-row">
-            <p><span>Phone </span>: 88 (02) 123456</p>
-        </div>
+﻿@model IEnumerable<UserDTO>
+    <div class="panel-body bio-graph-info">
+        @foreach (var admin in Model)
+        {
+            <div class="row">
+                <div class="bio-row">
+                    <p><span>Name </span>: @admin.Name</p>
+                </div>
+                <div class="bio-row">
+                    <p><span>Username </span>: @admin.UserName</p>
+                </div>
+                <div class="bio-row">
+                    <p><span>Email </span>: @admin.Email</p>
+                </div>
+                <div class="bio-row">
+                    <p><span>Country </span>: Azerbaijan</p>
+                </div>
+                <div class="bio-row">
+                    <p><span>Address </span>: Adress yazilmali</p>
+                </div>
+                <div class="bio-row">
+                    <p><span>Mobile </span>: (12) 03 4567890</p>
+                </div>
+                <div class="bio-row">
+                    <p><span>Phone </span>: 88 (02) 123456</p>
+                </div>
+            </div>
+        }
+
     </div>
-</div>
