--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
@@ -49,7 +49,7 @@
         $(".delete-about").click(function () {
             var id = $(this).data("id");
             alert(id);
-       
+            window.ur
         $.ajax({
             type: 'GET',
             url: '/ConstructionAdmin/About/Delete/' + id
