--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/AdminComponents/Default.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/AdminComponents/Default.cshtml
@@ -12,7 +12,7 @@
                 <div class="bio-row">
                     <p><span>Email </span>: @admin.Email</p>
                 </div>
-                <div class="bio-row">
+                @*<div class="bio-row">
                     <p><span>Country </span>: Azerbaijan</p>
                 </div>
                 <div class="bio-row">
@@ -23,7 +23,10 @@
                 </div>
                 <div class="bio-row">
                     <p><span>Phone </span>: 88 (02) 123456</p>
-                </div>
+                </div>*@
+
+                <a class="btn btn-primary" asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Edit" asp-route-id="@admin.Id">Edit Admin Profile</a>
+
             </div>
         }
 
