--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Create.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Create.cshtml
@@ -16,13 +16,13 @@
                     <div class="panel-body">
                         <div class="form">
                             <form class="cmxform form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Create" id="signupForm" method="post">
-                                <div asp-validation-summary="ModelOnly" class="form-group ">
+                                <div class="form-group ">
                                     @Html.AntiForgeryToken()
-                                    @*<label for="firstname" class="control-label col-lg-2">@Html.DisplayNameFor(model => model.Name)</label>
-                                        <div class="col-lg-10">
-                                            <input type="text" asp-for="Name" class=" form-control" placeholder="Enter a name" />
-                                            <span asp-validation-for="Name" class="text-danger"></span>
-                                        </div>*@
+                                    <label for="firstname" class="control-label col-lg-2">@Html.DisplayNameFor(model => model.Name)</label>
+                                    <div class="col-lg-10">
+                                        <input type="text" asp-for="Name" class=" form-control" placeholder="Enter a name" />
+                                        <span asp-validation-for="Name" class="text-danger"></span>
+                                    </div>
                                 </div>
                                 <div class="form-group ">
                                     <label for="username" class="control-label col-lg-2">@Html.DisplayNameFor(m => m.Username)</label>
