--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Edit.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Edit.cshtml
@@ -1,5 +1,4 @@
 ﻿@model UserEditModel
-
 <!--main content start-->
 <section id="main-content">
     <section class="wrapper">
@@ -26,7 +25,7 @@
                             <div class="form-group">
                             </div>
                             <div class="form-group">
-                                <label class="col-lg-2 control-label">@Html.DisplayNameFor(model=>model.Name)</label>
+                                <label class="col-lg-2 control-label">@Html.DisplayNameFor(model => model.Name)</label>
                                 <div class="col-lg-6">
                                     <input type="text" asp-for="Name" class="form-control" id="f-name" placeholder="Enter a name">
                                     <span asp-validation-for="Name" class="text-danger"></span>
@@ -56,7 +55,7 @@
                             <div class="form-group">
                                 <div class="col-lg-offset-2 col-lg-10">
                                     <button type="submit" class="btn btn-success">Save</button>
-                                    <button asp-action="index" asp-controller="account" type="button" class="btn btn-default">Cancel</button>
+                                    <button asp-action="index" asp-controller="account" type="button" class="btn btn-default cancel-button">Cancel</button>
                                 </div>
                             </div>
                         </form>
@@ -69,3 +68,12 @@
     </section>
 </section>
 <!--main content end-->
+
+@section scripts{
+    <script>
+        $(".cancel-button").click(function () {
+            window.location.href = "/ConstructionAdmin/Account/Index";
+        })
+
+    </script>
+}
