--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
@@ -63,13 +63,7 @@
                             <span>Pages</span>
                         </a>
                         <ul class="sub">
-                            <li><a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Index">Profile</a></li>
-                            <li><a asp-area="ConstructionAdmin" asp-controller="About" asp-action="Index">About</a></li>
-                            <li><a asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Index">Services</a></li>
-                            <li><a asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Index">Portfolio</a></li>
-                            <li><a asp-area="ConstructionAdmin" asp-controller="News" asp-action="Index">News</a></li>
-                            <li><a asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Index">Contact</a></li>
-                            <li><a asp-area="ConstructionAdmin" asp-controller="Image" asp-action="Index">Images</a></li>
+                            <partial name="_MenuView" />
                         </ul>
                     </li>
 
