--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Add.cshtml
@@ -16,7 +16,7 @@
                                 <div class="form-group">
 
                                     <div class="col-lg-10">
-                                        <input type="text" asp-for="NameAz" placeholder="NameAz" id="f-name" class="form-control">
+                                        <input type="text" asp-for="NameAz" placeholder="NameAz" id="f-name" class="form-control" required="">
 
                                     </div>
                                 </div>
