--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
@@ -9,6 +9,8 @@
     }
 </style>
 
+<div asp-validation-summary="All"></div>
+
 <section class="panel">
     <header class="panel-heading">
         About Elements Table
