--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Index.cshtml
@@ -1,5 +1,65 @@
-﻿@{
-    ViewData["Title"] = "Index";
-}
+﻿@model IEnumerable<ContactViewModel>
 
-    <h2>Contact</h2>
+<style type="text/css">
+    .button-create {
+        margin-bottom: 10px;
+    }
+</style>
+
+<section class="panel">
+    <header class="panel-heading">
+        Contact - Table
+    </header>
+
+    <div class="panel-body">
+        <div class="button-create">
+            <a asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Add" class="btn btn-primary">Create New Contact Element</a>
+        </div>
+        <div class="adv-table editable-table ">
+            <div class="space15"></div>
+            <div id="editable-sample_wrapper" class="dataTables_wrapper form-inline" role="grid">
+                <table class="table table-striped table-hover table-bordered dataTable" id="editable-sample" aria-describedby="editable-sample_info">
+                    <thead>
+                        <tr role="row">
+                            <th class="sorting_disabled" role="columnheader" rowspan="1" colspan="1" aria-label="Username" style="width: 182px;">Title</th>
+                            <th class="sorting" role="columnheader" tabindex="0" aria-controls="editable-sample" rowspan="1" colspan="1" aria-label="Notes: activate to sort column ascending" style="width: 177px;">Content</th>
+                            <th class="sorting_disabled" role="columnheader" rowspan="1" colspan="1" aria-label="Username" style="width: 182px;">Image</th>
+                            <th class="sorting" role="columnheader" tabindex="0" aria-controls="editable-sample" rowspan="1" colspan="1" aria-label="Edit: activate to sort column ascending" style="width: 87px;">Edit</th>
+                            <th class="sorting" role="columnheader" tabindex="0" aria-controls="editable-sample" rowspan="1" colspan="1" aria-label="Delete: activate to sort column ascending" style="width: 128px;">Delete</th>
+                        </tr>
+                    </thead>
+
+                    <tbody role="alert" aria-live="polite" aria-relevant="all">
+
+                        @foreach (var item in Model)
+                        {
+                            <tr class="odd">
+
+                                <td class="sorting_1">@item.Tittle</td>
+                                <td class=" ">@item.Content</td>
+                                <td class=" "><img src="@item.Image" width="60" height="80" alt="Alternate Text" /></td>
+                                <td class=" "><a class="edit btn btn-primary" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Update" asp-route-id="@item.Id">Edit</a></td>
+                                <td class=" "><a class="btn btn-danger delete delete-about" data-id="@item.Id">Delete</a></td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</section>
+@section scripts{
+    @*<script src="~/ConstructionAdmin/js/jquery-1.8.3.min.js"></script>*@
+    <script>
+
+        $(".delete-about").click(function () {
+            var id = $(this).data("id");
+
+        $.ajax({
+            type: 'GET',
+            url: '/ConstructionAdmin/About/Delete/' + id
+
+        })
+        });
+    </script>
+}
