--- a/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
@@ -14,3 +14,4 @@
 @using ConstructionSite.DTO.AdminViewModels
 @using ConstructionSite.Entity.Identity
 @using ConstructionSite.DTO.AdminViewModels.Blog
+@using ConstructionSite.DTO.AdminViewModels.Contact
