--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Index.cshtml
@@ -42,7 +42,7 @@
                                 <td class=" ">@item.Content</td>
                                 <td class=" "><img width="50" height="60" src="@item.Imagepath" alt="Alternate Text" /></td>
                                 <td class=" ">@item.CreateDate</td>
-                                <td class="btn btn-primary"><a class="edit btn btn-primary" asp-route-id="@item.Id" asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Edit">Update</a></td>
+                                <td class="btn btn-primary"><a class="edit btn btn-primary" asp-route-id="@item.Id" asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Edit">Edit</a></td>
                                 <td class=" "><a class="btn btn-danger delete delete-about" data-id="@item.Id">Delete</a></td>
                             </tr>
                         }
