--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Index.cshtml
@@ -23,7 +23,9 @@
                         <tr role="row">
                             <th class="sorting_disabled" role="columnheader" rowspan="1" colspan="1" aria-label="Username" style="width: 182px;">Title</th>
                             <th class="sorting" role="columnheader" tabindex="0" aria-controls="editable-sample" rowspan="1" colspan="1" aria-label="Notes: activate to sort column ascending" style="width: 177px;">Content</th>
-                            <th class="sorting_disabled" role="columnheader" rowspan="1" colspan="1" aria-label="Username" style="width: 182px;">Image</th>
+                            <th class="sorting_disabled" role="columnheader" rowspan="1" colspan="1" aria-label="Username" style="width: 182px;">Address</th>
+                            <th class="sorting_disabled" role="columnheader" rowspan="1" colspan="1" aria-label="Username" style="width: 182px;">Phone Number</th>
+                            <th class="sorting_disabled" role="columnheader" rowspan="1" colspan="1" aria-label="Username" style="width: 182px;">Email</th>
                             <th class="sorting" role="columnheader" tabindex="0" aria-controls="editable-sample" rowspan="1" colspan="1" aria-label="Edit: activate to sort column ascending" style="width: 87px;">Edit</th>
                             <th class="sorting" role="columnheader" tabindex="0" aria-controls="editable-sample" rowspan="1" colspan="1" aria-label="Delete: activate to sort column ascending" style="width: 128px;">Delete</th>
                         </tr>
@@ -33,14 +35,16 @@
 
                         @foreach (var item in Model)
                         {
-                            <tr class="odd">
+                        <tr class="odd">
 
-                                <td class="sorting_1">@item.Tittle</td>
-                                <td class=" ">@item.Content</td>
-                                <td class=" "><img src="@item.Image" width="60" height="80" alt="Alternate Text" /></td>
-                                <td class=" "><a class="edit btn btn-primary" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Update" asp-route-id="@item.Id">Edit</a></td>
-                                <td class=" "><a class="btn btn-danger delete delete-about" data-id="@item.Id">Delete</a></td>
-                            </tr>
+                            <td class="sorting_1">@item.Tittle</td>
+                            <td class=" ">@item.Content</td>
+                            <td class="sorting_1">@item.Address</td>
+                            <td class="sorting_1">@item.PhoneNumber</td>
+                            <td class="sorting_1">@item.Email</td>
+                            <td class="btn btn-primary"><a class="edit btn btn-primary" asp-route-id="@item.Id" asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Edit">Edit</a></td>
+                            <td class=" "><a class="btn btn-danger delete delete-about" data-id="@item.Id">Delete</a></td>
+                        </tr>
                         }
                     </tbody>
                 </table>
@@ -49,17 +53,13 @@
     </div>
 </section>
 @section scripts{
-    @*<script src="~/ConstructionAdmin/js/jquery-1.8.3.min.js"></script>*@
     <script>
-
         $(".delete-about").click(function () {
             var id = $(this).data("id");
-
-        $.ajax({
-            type: 'GET',
-            url: '/ConstructionAdmin/About/Delete/' + id
-
-        })
+            $.ajax({
+                type: 'GET',
+                url: '/ConstructionAdmin/Contact/Delete/' + id
+            })
         });
     </script>
 }
