--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Create.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Create.cshtml
@@ -1,7 +1,4 @@
 ﻿@model ContactAddViewModel
-@{
-    ViewData["Title"] = "Add";
-}
 
 <div class="row">
     <div class="col-lg-12">
@@ -10,7 +7,7 @@
                 Create Contact Elements
             </header>
             <div class="panel-body">
-                <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Create" method="post" enctype="multipart/form-data">
+                <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Create" method="post" enctype="multipart/form-data">
                     <div class="form-group">
                         <div class="col-lg-10">
                             <input type="text" asp-for="TittleAz" id="f-name" class="form-control">
@@ -18,12 +15,12 @@
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input asp-for="TittleRu" id="f-name" class="form-control">
+                            <input asp-for="TittleEn" id="f-name" class="form-control">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input asp-for="TittleEn" id="f-name" class="form-control">
+                            <input asp-for="TittleRu" id="f-name" class="form-control">
                         </div>
                     </div>
                     <div class="form-group ">
@@ -33,23 +30,33 @@
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea asp-for="ContentRu" class="form-control " id="ccomment" required=""></textarea>
+                            <textarea asp-for="ContentEn" class="form-control " id="ccomment" required=""></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea asp-for="ContentEn" class="form-control " id="ccomment" required=""></textarea>
+                            <textarea asp-for="ContentRu" class="form-control " id="ccomment" required=""></textarea>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="file" name="file" id="f-name" class="form-control">
+                            <input type="text" asp-for="Address" id="f-name" class="form-control">
                         </div>
                     </div>
-
+                    <div class="form-group">
+                        <div class="col-lg-10">
+                            <input type="text" asp-for="PhoneNumber" id="f-name" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-lg-10">
+                            <input type="text" asp-for="Email" id="f-name" class="form-control">
+                        </div>
+                    </div>
                     <div class="form-group">
                         <div class="col-lg-offset-2 col-lg-10">
-                            <button class="btn btn-success" type="submit">Submit</button>
+                            <button class="btn btn-danger" type="submit">Save</button>
+                            <button class="btn btn-default cancel-button" type="button">Cancel</button>
                         </div>
                     </div>
                 </form>
@@ -61,7 +68,7 @@
 @section scripts{
     <script>
         $(".cancel-button").click(function () {
-            window.location.href = "/ConstructionAdmin/Blog/Index";
+            window.location.href = "/ConstructionAdmin/Contact/Index";
         })
     </script>
 }
